--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,5 @@ addons:
   apt:
     packages:
       - oracle-java8-installer
-before_script: cd ltse/
 script:
-  - javac LTSExtractor.java
+  -  javac ltse/LTSExtractor.java
